--- a/package.json
+++ b/package.json
@@ -4,10 +4,12 @@
   "private": true,
   "scripts": {
     "dev": "next dev --turbo",
-    "build": "next build",
+    "build": "prisma generate && next build",
+    "build:prod": "next build",
     "start": "next start",
     "lint": "next lint",
     "format": "prettier --write .",
+    "postinstall": "prisma generate",
     "db:push": "prisma db push",
     "db:migrate": "prisma migrate dev",
     "db:generate": "prisma generate",
@@ -17,6 +19,7 @@
   "dependencies": {
     "@prisma/client": "^5.6.0",
     "next": "14.0.2",
+    "prisma": "^5.6.0",
     "react": "^18",
     "react-dom": "^18"
   },
@@ -30,7 +33,6 @@
     "postcss": "^8.5.6",
     "prettier": "^3.0.0",
     "prettier-plugin-tailwindcss": "^0.7.1",
-    "prisma": "^5.6.0",
     "tailwindcss": "^3.3.6",
     "tsx": "^4.20.6",
     "typescript": "^5"
