--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "lint": "next lint",
     "format": "prettier --write .",
     "postinstall": "prisma generate",
+    "clean:prisma": "./scripts/clear-prisma-cache.sh",
     "db:push": "prisma db push",
     "db:migrate": "prisma migrate dev",
     "db:generate": "prisma generate",
