--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "format": "prettier --write .",
     "postinstall": "prisma generate",
     "clean:prisma": "./scripts/clear-prisma-cache.sh",
+    "test:api": "./scripts/test-api.sh",
     "db:push": "prisma db push",
     "db:migrate": "prisma migrate dev",
     "db:generate": "prisma generate",
