--- a/package.json
+++ b/package.json
@@ -12,8 +12,11 @@
     "postinstall": "prisma generate",
     "clean:prisma": "./scripts/clear-prisma-cache.sh",
     "test:api": "./scripts/test-api.sh",
+    "deploy:migrations": "./scripts/deploy-migrations.sh",
     "db:push": "prisma db push",
     "db:migrate": "prisma migrate dev",
+    "db:migrate:deploy": "prisma migrate deploy",
+    "db:migrate:status": "prisma migrate status",
     "db:generate": "prisma generate",
     "db:studio": "prisma studio",
     "db:seed": "npx tsx prisma/seed.ts"
