🔄 Revolutionary fix: Runtime database selection
BREAKING CHANGE: Complete architecture change to solve translation issues

Problem: Vercel auto-translates DATABASE_URL to URL_БАЗИ_ДАНИХ during build
Solution: Move database selection from build-time to runtime

New Architecture:
- Static schema.prisma (never modified during build)
- Runtime database URL determination in Prisma client
- Environment-based database provider selection
- Zero file modifications during Vercel builds

Key Changes:
1. prisma/schema.prisma - Static SQLite schema (no modifications)
2. src/lib/prisma.ts - Runtime database selection logic
3. scripts/minimal-build.sh - Minimal build with no file changes
4. Environment-based datasource URL override

Benefits:
- ✅ No P1012 errors (schema never modified)
- ✅ No translation issues (runtime code immune)
- ✅ Simplified build process
- ✅ Better debugging and error handling
- ✅ More flexible database switching

This approach completely bypasses Vercel's file translation
by handling database selection in JavaScript runtime code
instead of modifying Prisma schema files during build.

The Prisma client now dynamically selects the correct database
based on environment variables at runtime, not build time.

--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "private": true,
   "scripts": {
     "dev": "next dev --turbo",
-    "build": "./scripts/vercel-build.sh",
+    "build": "./scripts/minimal-build.sh",
+    "build:ultra": "./scripts/ultra-safe-build.sh",
+    "build:safe": "./scripts/vercel-build.sh",
     "build:emergency": "./scripts/emergency-fix.sh",
     "build:local": "prisma generate && next build",
     "start": "next start",
