🎯 SIMPLE APPROACH: Copy working solution from prizma-beckend1-1810
✅ Changes:
- Simplified build scripts (removed complex bash scripts)
- Clean vercel-build: prisma generate && SKIP_ENV_VALIDATION=true next build
- Basic Prisma schema with SQLite for local dev
- Standard Prisma client without programmatic complications
- Clean package.json structure

🎯 Next steps:
1. Set POSTGRES_PRISMA_URL on Vercel
2. Set DATABASE_URL on Vercel
3. Redeploy and test /api/health

Based on working project: prizma-beckend1-1810

--- a/.env.example
+++ b/.env.example
@@ -1,5 +1,11 @@
-# Database
+# Environment variables for Vercel deployment
+
+# Postgres Database URLs (for Vercel)
+POSTGRES_PRISMA_URL="postgresql://username:password@localhost:5432/dbname?pgbouncer=true&connect_timeout=15"
+POSTGRES_URL_NON_POOLING="postgresql://username:password@localhost:5432/dbname"
+
+# SQLite for local development  
 DATABASE_URL="file:./dev.db"
 
-# For production (Vercel), use PostgreSQL:
-# DATABASE_URL="postgresql://username:password@host:port/database?schema=public"
+# Next.js specific
+NEXT_PUBLIC_APP_URL="http://localhost:3000"
