--- a/package.json
+++ b/package.json
@@ -4,28 +4,16 @@
   "private": true,
   "scripts": {
     "dev": "next dev --turbo",
-    "build": "./scripts/zero-schema-build.sh",
-    "build:ultimate": "./scripts/ultimate-fix.sh",
-    "build:minimal": "./scripts/minimal-build.sh",
-    "build:ultra": "./scripts/ultra-safe-build.sh",
-    "build:safe": "./scripts/vercel-build.sh",
-    "build:emergency": "./scripts/emergency-fix.sh",
-    "build:local": "prisma generate && next build",
+    "build": "prisma generate && next build",
+    "vercel-build": "prisma generate && SKIP_ENV_VALIDATION=true next build",
     "start": "next start",
     "lint": "next lint",
     "format": "prettier --write .",
-    "postinstall": "./scripts/postinstall.sh",
-    "diagnostic": "./scripts/emergency-diagnostic.sh",
-    "clean:prisma": "./scripts/clear-prisma-cache.sh",
-    "test:api": "./scripts/test-api.sh",
-    "deploy:migrations": "./scripts/deploy-migrations.sh",
+    "postinstall": "prisma generate",
     "db:push": "prisma db push",
-    "db:migrate": "prisma migrate dev",
-    "db:migrate:deploy": "prisma migrate deploy",
-    "db:migrate:status": "prisma migrate status",
+    "db:migrate": "prisma migrate dev", 
     "db:generate": "prisma generate",
-    "db:studio": "prisma studio",
-    "db:seed": "npx tsx prisma/seed.ts"
+    "db:studio": "prisma studio"
   },
   "dependencies": {
     "@prisma/client": "^5.6.0",
