🛠️ FIX TRANSLATION BUG: Custom environment variable
✅ Solution:
- Changed DATABASE_URL → DB_CONNECTION_STRING in schema.prisma
- Vercel won't translate DB_CONNECTION_STRING to Ukrainian
- Added fallback to DATABASE_URL for compatibility
- Fixed health route BigInt serialization issue
- Simplified health check without complex diagnostics

🎯 Changes:
- prisma/schema.prisma: url = env('DB_CONNECTION_STRING')
- src/lib/prisma.ts: Support both DB_CONNECTION_STRING and DATABASE_URL
- src/app/api/health/route.ts: Simple connection test + BigInt fix
- .env.example: Instructions for DB_CONNECTION_STRING

📋 Vercel setup:
1. Set DB_CONNECTION_STRING = PostgreSQL URL
2. Set DATABASE_URL = Same PostgreSQL URL (fallback)
3. Redeploy

Result: Translation bug bypassed! 🎉

--- a/.env.example
+++ b/.env.example
@@ -1,10 +1,9 @@
 # Environment variables for Vercel deployment
 
-# Postgres Database URLs (for Vercel)
-POSTGRES_PRISMA_URL="postgresql://username:password@localhost:5432/dbname?pgbouncer=true&connect_timeout=15"
-POSTGRES_URL_NON_POOLING="postgresql://username:password@localhost:5432/dbname"
+# Primary database connection (Vercel will use this)
+DB_CONNECTION_STRING="postgresql://username:password@localhost:5432/dbname"
 
-# SQLite for local development  
+# Fallback for compatibility  
 DATABASE_URL="file:./dev.db"
 
 # Next.js specific
