--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "scripts": {
     "dev": "next dev --turbo",
     "build": "prisma generate && next build",
-    "vercel-build": "prisma generate && SKIP_ENV_VALIDATION=true next build",
+    "vercel-build": "chmod +x scripts/generate-schema.sh && ./scripts/generate-schema.sh && prisma generate && SKIP_ENV_VALIDATION=true next build",
     "start": "next start",
     "lint": "next lint",
     "format": "prettier --write .",
